# agentic-orchestration-samples

./: .gitignore  README.md
appointment-booking-assistant/: .env_example  README.md  config.yml  docker-compose-endpoints.yml  docker-compose.yml  endpoints.yml  pyproject.toml
appointment-booking-assistant/actions/: appointment_tool.py  schedule_appointment.py
appointment-booking-assistant/data/flows/: schedule_appointment.yml
appointment-booking-assistant/domain/: schedule_appointment.yml  shared.yml
appointment-booking-assistant/mcp_server/: Dockerfile  README.md  appointment_server_http.py
appointment-booking-assistant/prompt_templates/: no_search_chitchat.jinja2
appointment-booking-assistant/sub_agents/appointment_selector/: config.yml
car-purchase-assistant/: .env_example  README.md  config.yml  docker-compose.yml  endpoints.yml  pyproject.toml
car-purchase-assistant/a2a_server/: README.md  __main__.py  agent.py  agent_executor.py  mock_car_api.py  requirements.txt
car-purchase-assistant/actions/: action_car_shopping.py  actions_financing.py  calculate_affordability.py  cars.py  check_existing_loans.py  check_loan_affordability.py  shopping.py
car-purchase-assistant/actions/contacts/: add_contact.py  list_contacts.py  remove_contact.py
car-purchase-assistant/custom/: appointment_booking_agent.py  car_research_agent.py  car_shopping_agent.py
car-purchase-assistant/data/flows/: calculate_loan.yml  car_shopping.yml  check_credit_score.yml  check_loan_affordability.yml  financing.yml  healthcare.yml  schedule_appointment.yml
car-purchase-assistant/db/: cars.json
car-purchase-assistant/domain/: calculate_loan.yml  car_research.yml  car_shopping.yml  check_balance.yml  check_credit_score.yml  check_existing_loans.yml  check_loan_affordability.yml  financing.yml
car-purchase-assistant/domain/contacts/: add_contact.yml  remove_contact.yml
car-purchase-assistant/mcp_server/: README.md  __main__.py  pyproject.toml  tavily_search_server.py
car-purchase-assistant/prompt_templates/: command_generator_prompt.jinja2
car-purchase-assistant/servers/appointment_booking_server/: Dockerfile  README.md  appointment_server_http.py
(+105 files in other folders)
