[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appointment-booking-assistant"
version = "0.1.0"
description = "An appointment booking assistant using MCP."
requires-python = ">=3.10,<3.13"
dependencies = [
    "rasa-pro==3.14.0.dev2",
    "fastmcp>=2.0.0,<3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["actions", "mcp_server"]

[tool.hatch.build]
include = [
    "actions/**/*",
    "mcp_server/**/*",
]
exclude = [
    "data/**/*",
    "db/**/*",
    "domain/**/*",
    "e2e_tests/**/*",
    "sub_agents/**/*",
    "prompt_templates/**/*",
    "*.yml",
    "*.yaml",
    "*.json",
]

