[project]
name = "car-purchase-assistant"
version = "0.1.0"
description = "A car purchase assistant using MCP."
requires-python = ">=3.10,<3.13"
dependencies = [
    "rasa-pro==3.14.0.dev3",
    "fastmcp>=2.0.0,<3.0.0",
    "tavily-python>=0.3.0,<1.0.0",
]

[project.scripts]
rasa-actions = "rasa_sdk.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["actions", "mcp_server"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

# Limit to macOS to avoid cross-platform dependency conflicts
environments = ["sys_platform == 'darwin'"]

# Force compatible versions, ignoring OpenTelemetry conflicts since not used in Rasa
override-dependencies = [
    "protobuf==6.31.1",
    "opentelemetry-api>=1.33.0",
    "opentelemetry-sdk>=1.33.0",
    "pydantic>=2.11.3",
]
