[project]
name = "mcp-web-search-server"
version = "0.1.0"
description = "MCP server providing web search via Tavily"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "tavily-python>=0.3.0",
    "uvicorn>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []